--- a/index.html
+++ b/index.html
@@ -26,5 +26,15 @@
 
   <script src="firebase-config.js"></script>
   <script src="app.js"></script>
-</body>
+  </body>
+
+  <button id="manage-btn" onclick="openModal()">Управлять словами</button>
+
+  <div id="modal" class="modal">
+    <div class="modal-content">
+      <span class="close" onclick="closeModal()">&times;</span>
+      <h3>Список слов</h3>
+      <div id="word-list"></div>
+    </div>
+  </div>
 </html>
