--- a/index.html
+++ b/index.html
@@ -43,9 +43,12 @@
       <div class="custom-select" id="level-select">
         <div class="selected" data-value="a1">A1</div>
         <div class="options">
+          <div data-value="randomAll">Случайные слова</div>
           <div data-value="a1">A1</div>
           <div data-value="a2">A2</div>
           <div data-value="b1">B1</div>
+          <div data-value="b2">B2</div>
+          <div data-value="c1">C1</div>
         </div>
       </div>
 
@@ -77,7 +80,7 @@
     </div>
   </div>
 
-  <footer class="version">v1.3.1</footer>
+  <footer class="version">v1.4.1</footer>
   <button id="lang-btn" class="lang-btn" onclick="toggleLang()">RU</button>
 
   <script src="https://www.gstatic.com/firebasejs/10.12.4/firebase-app-compat.js"></script>
